[gd_scene load_steps=2 format=3 uid="uid://bq1h7k5un62xl"]

[ext_resource type="Script" path="res://Components/Magic/MagicComponent.gd" id="1_u50s5"]

[node name="MagicComponent" type="Node2D"]
script = ExtResource("1_u50s5")

[node name="RechargeRateTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="RechargeRateTimer" to="." method="_on_recharge_rate_timer_timeout"]
